update to Jetty12